2001-06-21  Mito  <mit@nines.nec.co.jp>

	* shimbun/sb-hns.el (shimbun-hns-article): Add title string to the
	article buffer.

2001-06-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Define.
	(shimbun-get-headers): Encode from.

	* shimbun/sb-slashdot-jp.el (shimbun-headers): Setup 'cid' argument for
	comments.pl.
	(shimbun-slashdot-jp-make-contents): New inline function.
	(shimbun-article): Define (To reload story articles).

2001-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-encapsulate-images): Renamed from
	`shimbun-encapsulate-article'.

2001-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-x-face-alist): New variable.

2001-06-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-impress.el (shimbun-impress-expiration-days):
	Commented out.

	* shimbun/sb-kantei.el: New file.

2001-06-15  ABE Yasushi  <yasushi@stbbs.net>

	* shimbun/sb-javaconf.el (shimbun-javaconf-groups): Add some groups.
	(shimbun-get-headers): Follow the change above.

2001-06-14  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Fixed reference order.

2001-06-14  ABE Yasushi  <yasushi@stbbs.net>

	* shimbun/sb-javaconf.el: New file.

2001-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-base64-encode-string): Enclose the
	function definition with `eval-and-compile'.

2001-06-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-content-type): New alias.
	(shimbun-url-exists-p): New function.

	* shimbun/sb-gyve.el: New file.

2001-06-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-slashdot-jp.el (shimbun-headers): Encode `from' with
	`shimbun-mime-encode-string';
	Follow the search.pl's renewal;
	Added 'mode=flat' option for comments.pl.

2001-06-12  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-m17n.el: New file.

	* w3m.el: Added support code for w3m-m17n.