@@ -2297,7 +2297,10 @@ to nil."
 		      (cond
 		       ((stringp x) x)
 		       ((setq x (eval x))
-			(if (stringp x) x (prin1-to-string x)))))
+			(if (stringp x)
+			    x
+			  (let (print-level print-length)
+			    (prin1-to-string x))))))
 		    (append w3m-halfdump-command-arguments
 			    w3m-halfdump-command-common-arguments)))))
     (w3m-message "Rendering... done")
